[metadata]
name = hdrpy
summary = HDR histogram implementation based on numpy
description-file =
    README.md
author = Dmitri Pribysh
author-email = dmand@yandex.ru
home-page = https://github.com/dmand/hdrpy
classifier =
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
    Operating System :: Windows
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3

[files]
packages =
    hdrpy

[bdist_wheel]
universal = 1

